--- a/application/index/view/flowdesign/lists.html
+++ b/application/index/view/flowdesign/lists.html
@@ -1,5 +1,5 @@
 {include file='pub/base' /}
-<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i>  Tpflow 工作流插件示例 <a href="{:url('index/welcome')}"  class="btn btn-primary radius"> 返回</a>
+<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i>  Tpflow 工作流插件示例 
 <a onclick="layer_show('添加工作流','{:url('add')}','550','400')" class="btn btn-primary radius">添加工作流</a>
 </nav>
 <div class="page-container">
